# TradingBot

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONTEXT.md  Cargo.toml  DESIGN.md  INDICATOR_TODO.md  NEXT_STEPS.md  PLAN.md  PRD-multi-timeframe-strategies.md  PROJECT.md  README.md  STRATEGIES.md  config.toml  ideas.md  justfile  plan-spacetime  report.md  trading-bot.toml
.claude/: settings.local.json
.out-of-scope/: per-timeframe-strategy-warmup.md  strategy-state-v2-complex-persistent-state.md
.pi/issue-series/: paper-trading-persistence.yaml
backtest_plan/: README.md  candle_permutation_monte_carlo.rhai  plan.rhai
backtester/: Cargo.toml  PRD-backtest-plan-engine.md
backtester/src/: lib.rs  main.rs  plan.rs
crates/bot/: Cargo.toml
crates/bot/src/: calendar.rs  collector.rs  config.rs  db.rs  lib.rs  main.rs  market_data.rs  metrics.rs  regime.rs
crates/bot/src/indicators/: ema.rs  macd.rs  mod.rs  slope.rs
crates/bot/src/optimizer/: engine.rs  evaluator.rs  fitness.rs  genome.rs  mod.rs
crates/bot/src/paper_trading/: engine.rs  mod.rs  tax.rs
crates/bot/src/strategy/: bollinger.rs  dual_macd.rs  macd.rs  macd_enhanced.rs  mod.rs  rsi.rs  sma_crossover.rs
crates/ui/: Cargo.toml
crates/ui/src/: icons.rs  main.rs
db-layer/: Cargo.toml
db-layer/src/: client.rs  error.rs  lib.rs  models.rs  queries.rs
db-layer/src/module_bindings/: candle_type.rs  candles_table.rs  close_position_reducer.rs  delete_candles_by_symbol_reducer.rs  delete_paper_data_by_strategy_identity_reducer.rs  delete_trades_by_strategy_reducer.rs  insert_candle_reducer.rs  insert_trade_reducer.rs  live_position_type.rs  live_positions_table.rs  live_trade_type.rs  live_trades_table.rs  mod.rs  open_paper_position_reducer.rs  open_position_reducer.rs  paper_exit_kind_type.rs  paper_open_position_type.rs  paper_open_positions_table.rs  paper_trade_type.rs  paper_trades_table.rs  record_paper_position_closed_reducer.rs  update_paper_position_risk_boundaries_reducer.rs
db-layer/tests/: integration.rs
docs/adr/: 0001-fibonacci-as-anchored-structure-indicator.md  0002-build-trading-runtime-as-new-crate.md  0003-runtime-managed-risk-exits-are-opt-in-hard-exits.md  0004-runtime-refactor-does-not-preserve-legacy-compatibility.md  0005-use-typed-rhai-strategy-api.md  0006-strategy-configuration-owns-timeframes.md  0007-lowest-timeframe-reaggregation-for-multi-timeframe-synthetic-data.md  0008-runtime-market-structure-is-runtime-owned.md  0009-use-open-timestamps-for-completed-candles.md  0010-paper-trading-persistence-projects-runtime-portfolio-transitions.md  0011-position-risk-updates-use-explicit-partial-boundary-change-semantics.md  0012-execution-cost-model-is-runtime-owned-simulated-fill-accounting.md  0013-external-account-snapshot-is-live-runner-policy.md
docs/features/: EDA.md  backtest-plans.md  markov-regime-signal-engine.md  monte-carlo-trade-resampling.md
docs/refactor/: rhai-authoring-performance-smoke.md  rhai-market-view-snapshot-cost.md  rhai-strategy-authoring-api.md  runtime-market-state-semantics.md  runtime-market-structure.md  runtime-migration-control.md  trading-runtime-refactor-plan.md
domain/: Cargo.toml
domain/src/: candle.rs  context.rs  executor.rs  lib.rs  position.rs
engine/: Cargo.toml
engine/src/: anchored.rs  bindings.rs  candle_wrapper.rs  error.rs  indicator_cache.rs  lib.rs  strategy_loader.rs  vm.rs  warmup.rs  warmup_detector.rs
indicators/: Cargo.toml  INDICATOR_TODO.md  plan.md
indicators/src/: lib.rs  slope.rs
indicators/src/anchored/: mod.rs  ring.rs
indicators/src/anchored/detectors/: mod.rs  pivot.rs  session.rs
indicators/src/anchored/evaluators/: mod.rs  slope_seg.rs  trendline.rs
indicators/src/momentum/: cci.rs  mod.rs  roc.rs  rsi.rs  stochastic.rs  williams_r.rs
indicators/src/support_resistance/: fibonacci.rs  mod.rs  pivot_points.rs
indicators/src/trend/: adx.rs  dema.rs  ema.rs  ichimoku.rs  macd.rs  mod.rs  sar.rs  sma.rs  tema.rs
indicators/src/volatility/: atr.rs  bollinger.rs  keltner.rs  mod.rs
indicators/src/volume/: mfi.rs  mod.rs  obv.rs  volume_profile.rs  vwap.rs
shared/: Cargo.toml
shared/src/: candle.rs  context.rs  executor.rs  lib.rs  position.rs  signal.rs  timeframe.rs
spacetimedb-module/: Cargo.toml  README.md
spacetimedb-module/src/: lib.rs
strategies/: README.md  REFERENCE.md  min_loss.rhai  sma_cross.lua  sma_cross.rhai  trendline_break.rhai
trading-daemon/: Cargo.toml
trading-daemon/src/: cli.rs  config.rs  lib.rs  live_engine.rs  main.rs  order_executor.rs  paper_trading_persistence.rs  protective_shutdown.rs  warmup.rs
trading-daemon/src/seed/: mod.rs  yahoo.rs
trading-daemon/tests/: integration.rs
trading-runtime/: Cargo.toml
trading-runtime/src/: anchored.rs  decision.rs  events.rs  execution.rs  lib.rs  market_input.rs  market_state.rs  portfolio.rs  rhai_strategy.rs  risk_exit.rs  runtime.rs  secondary_context.rs  step.rs  strategy.rs  strategy_config.rs  warmup.rs
trading-runtime/tests/: execution_cost_model.rs  market_input.rs  market_view_snapshot_cost.rs  portfolio_helpers.rs  rhai_authoring_performance_smoke.rs  risk_exit.rs  risk_exit_regressions.rs  runtime_step.rs  strategy_examples.rs  strategy_tick_boundary.rs  trading_runtime.rs
trading-ui/: Cargo.toml
trading-ui/src/: main.rs
