[workspace]
members = [
    "shared",
    "indicators",
    "db-layer",
    "engine",
    "trading-daemon",
    "trading-ui",
    "backtester",
]
# spacetimedb-module targets wasm32-unknown-unknown and is built separately.
# See: just db-build / just db-deploy
exclude = ["spacetimedb-module"]
resolver = "2"

[workspace.dependencies]
# Core
serde       = { version = "1.0",  features = ["derive"] }
serde_json  = "1.0"
thiserror   = "2.0"
anyhow      = "1.0"

# Async runtime
tokio       = { version = "1",    features = ["full"] }

# HTTP / provider APIs (used by trading-daemon for broker/Yahoo API calls)
reqwest     = { version = "0.13", features = ["json"] }

# SpacetimeDB client SDK
spacetimedb-sdk = { version = "2" }

# Rhai scripting (Rust-native, no FFI)
rhai        = { version = "1", features = ["sync", "internals"] }

# Parallel backtesting
rayon       = "1.10"

# CLI
clap        = { version = "4",    features = ["derive"] }

# Logging
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
