[package]
name    = "backtester"
version = "0.1.0"
edition = "2021"

[lib]
name = "backtester"
path = "src/lib.rs"

[[bin]]
name = "backtester"
path = "src/main.rs"

[dependencies]
domain     = { path = "../domain" }
db-layer   = { path = "../db-layer" }
trading-runtime = { path = "../trading-runtime" }
anyhow     = { workspace = true }
chrono     = { version = "0.4", default-features = false, features = ["std"] }
clap       = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
rhai               = { workspace = true }
