[package]
name    = "db-layer"
version = "0.1.0"
edition = "2021"

[dependencies]
shared     = { path = "../shared" }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
tokio      = { workspace = true }
reqwest    = { workspace = true }
tracing    = { workspace = true }
