[package]
name    = "db-layer"
version = "0.1.0"
edition = "2021"

[dependencies]
domain             = { path = "../domain" }
spacetimedb-sdk    = { workspace = true, features = ["allow_loopback_http_for_tests"] }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
