[package]
name    = "trading-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trading-daemon"
path = "src/main.rs"

[dependencies]
shared     = { path = "../shared" }
db-layer   = { path = "../db-layer" }
engine     = { path = "../engine" }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
tokio      = { workspace = true }
reqwest    = { workspace = true }
clap       = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
