[package]
name    = "trading-daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "trading-daemon"
path = "src/main.rs"

[dependencies]
domain     = { path = "../domain" }
db-layer   = { path = "../db-layer" }
trading-runtime = { path = "../trading-runtime" }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
anyhow     = { workspace = true }
tokio      = { workspace = true }
reqwest    = { workspace = true }
clap       = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
tokio-util       = { version = "0.7", features = ["rt"] }
toml             = "0.8"
spacetimedb-sdk  = { workspace = true }
rhai             = { workspace = true }
