[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bot"
path = "src/main.rs"

[[bin]]
name = "backtest"
path = "src/bin/backtest.rs"

[[bin]]
name = "chart"
path = "src/bin/chart.rs"

[[bin]]
name = "collector"
path = "src/bin/collector.rs"

[dependencies]
tokio      = { version = "1",    features = ["full"] }
reqwest    = { version = "0.12", features = ["json"] }
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
chrono     = { version = "0.4",  features = ["serde"] }
anyhow     = "1"
thiserror  = "1"
toml       = "0.8"
log        = "0.4"
env_logger = "0.11"
rusqlite   = "0.32"
plotters   = { version = "0.3", features = ["chrono"] }
