[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ui"
path = "src/main.rs"

[dependencies]
gpui                   = "0.2.2"
gpui-component         = "0.5.1"
anyhow                 = "1"
rust-embed             = { version = "8.7.2", features = ["interpolate-folder-path", "include-exclude"] }
